Crud entrenador Layout

--- a/deber_pokemon/app/src/main/AndroidManifest.xml
+++ b/deber_pokemon/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity_crear_entrenador"></activity>
+        <activity android:name=".activity_buscar_entrenador"></activity>
+        <activity android:name=".activity_crear_entrenador" />
         <activity android:name=".activity_entrenador" />
         <activity android:name=".MainActivity">
             <intent-filter>
