--- a/02-android/app/src/main/AndroidManifest.xml
+++ b/02-android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BListVuewActivity"></activity>
+
+        <activity android:name=".IntentEnviaParametros">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="text/plain"/>
+            </intent-filter>
+
+        </activity>
+
+
+        <activity android:name=".BListViewActivity" />
         <activity android:name=".CicloVida" />
         <activity android:name=".MainActivity">
             <intent-filter>
